--- a/index.html
+++ b/index.html
@@ -10,7 +10,12 @@
     </head>
     <body>
         <header>
-            
+            <div class="container">
+                <div class="row justify-content-between">
+                    <div class="col-4">START BOOTSTRAP</div>
+                    <div class="col-4 text-end">HAMB.</div>
+                </div>
+            </div>
         </header>
     </body>
 </html>
