--- a/index.html
+++ b/index.html
@@ -17,5 +17,28 @@
                 </div>
             </div>
         </header>
+        <main>
+            <section>
+                <div class="container text-center">
+                    <div class="row gy-3">
+                        <div class="col-12">IMG</div>
+                        <div class="col-12">START BOOTSTRAP</div>
+                        <div class="col-12">LOREM - IPSUM -DOCET - CARPE - DIEM</div>
+                    </div>
+                </div>
+            </section>
+            <section>
+
+            </section>
+            <section>
+
+            </section>
+            <section>
+
+            </section>
+            <section>
+
+            </section>
+        </main>
     </body>
 </html>
