--- a/index.html
+++ b/index.html
@@ -23,14 +23,24 @@
                     <div class="row gy-3">
                         <div class="col-12">IMG</div>
                         <div class="col-12">START BOOTSTRAP</div>
+                        <div class="col-12">STAR</div>
                         <div class="col-12">LOREM - IPSUM -DOCET - CARPE - DIEM</div>
                     </div>
                 </div>
             </section>
             <section>
-
-            </section>
-            <section>
+                <div class="container">
+                    <div class="row g-3 justify-content-between row-cols-sm-1 row-cols-md-2 row-cols-lg-3 text-center"> <!-- margin orizzontale ? -->
+                        <div class="col-12">PORTFOLIO</div>
+                        <div class="col-12 ">STAR</div>
+                        <div class="col">img</div>
+                        <div class="col">img</div>
+                        <div class="col">img</div>
+                        <div class="col">img</div>
+                        <div class="col">img</div>
+                        <div class="col">img</div>
+                    </div>
+                </div>
 
             </section>
             <section>
@@ -40,5 +50,8 @@
 
             </section>
         </main>
+        <footer>
+            
+        </footer>
     </body>
 </html>
