--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <link rel="stylesheet" href="./css/style.css">
     </head>
     <body>
+        <!-- HEADER  -->
         <header>
             <div class="container">
                 <div class="row justify-content-between">
@@ -18,6 +19,7 @@
             </div>
         </header>
         <main>
+            <!-- PRIMA SECTION  -->
             <section>
                 <div class="container text-center">
                     <div class="row gy-3">
@@ -28,6 +30,7 @@
                     </div>
                 </div>
             </section>
+            <!-- SECONDA SECTION  -->
             <section>
                 <div class="container">
                     <div class="row g-3 justify-content-between row-cols-sm-1 row-cols-md-2 row-cols-lg-3 text-center"> <!-- margin orizzontale ? -->
@@ -41,17 +44,25 @@
                         <div class="col">img</div>
                     </div>
                 </div>
-
             </section>
+            <!-- TERZA SECTION  -->
             <section>
-
+                <div class="container">
+                    <div class="row justify-content-center g-3"> <!-- margin orizzontale ? -->
+                        <div class="col-12 text-center">ABOUT</div>
+                        <div class="col-12 text-center">STAR</div>
+                        <div class="col-sm-8 col-md-4 col-lg-5">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Facere voluptas distinctio obcaecati deleniti commodi natus a corporis tenetur facilis quaerat? Similique magni aliquid adipisci, officia modi tenetur quisquam esse amet.</div>
+                        <div class="col-sm-8 col-md-4 col-lg-5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam debitis rem adipisci sed corrupti quod at laudantium iure earum labore rerum nemo quam beatae enim atque similique, nostrum tempora in.</div>
+                        <div class="col-12 text-center">Download</div>
+                    </div>
+                </div>
             </section>
             <section>
 
             </section>
         </main>
         <footer>
-            
+
         </footer>
     </body>
 </html>
