Struttura blocchi terza section

--- a/index.html
+++ b/index.html
@@ -58,7 +58,23 @@
                 </div>
             </section>
             <section>
-
+                <div class="container">
+                    <div class="row justify-content-center g-3"> <!-- margin orizzontale ? -->
+                        <div class="col-12 text-center">CONTACT ME</div>
+                        <div class="col-12 text-center">STAR</div>
+                        <div class="col-sm-7 col-md-8 col-lg-10 ">
+                            <div>
+                                <ul>
+                                    <li>Name</li>
+                                    <li>Email</li>
+                                    <li>Phone</li>
+                                    <li>Message</li>
+                                    <li>send</li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </section>
         </main>
         <footer>
