--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <!-- SECONDA SECTION  -->
             <section>
                 <div class="container">
-                    <div class="row g-3 justify-content-between row-cols-sm-1 row-cols-md-2 row-cols-lg-3 text-center"> <!-- margin orizzontale ? -->
+                    <div class="row g-3 justify-content-between row-cols-1 row-cols-md-2 row-cols-lg-3 text-center"> <!-- margin orizzontale ? -->
                         <div class="col-12">PORTFOLIO</div>
                         <div class="col-12 ">STAR</div>
                         <div class="col">img</div>
@@ -51,8 +51,8 @@
                     <div class="row justify-content-center g-3"> <!-- margin orizzontale ? -->
                         <div class="col-12 text-center">ABOUT</div>
                         <div class="col-12 text-center">STAR</div>
-                        <div class="col-sm-8 col-md-4 col-lg-5">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Facere voluptas distinctio obcaecati deleniti commodi natus a corporis tenetur facilis quaerat? Similique magni aliquid adipisci, officia modi tenetur quisquam esse amet.</div>
-                        <div class="col-sm-8 col-md-4 col-lg-5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam debitis rem adipisci sed corrupti quod at laudantium iure earum labore rerum nemo quam beatae enim atque similique, nostrum tempora in.</div>
+                        <div class="col-8 col-md-4 col-lg-5">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Facere voluptas distinctio obcaecati deleniti commodi natus a corporis tenetur facilis quaerat? Similique magni aliquid adipisci, officia modi tenetur quisquam esse amet.</div>
+                        <div class="col-8 col-md-4 col-lg-5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam debitis rem adipisci sed corrupti quod at laudantium iure earum labore rerum nemo quam beatae enim atque similique, nostrum tempora in.</div>
                         <div class="col-12 text-center">Download</div>
                     </div>
                 </div>
@@ -77,7 +77,26 @@
                 </div>
             </section>
         </main>
+        <!-- FOOTER  -->
         <footer>
+            <section>
+                <div class="container">
+                    <div class="row text-center">
+                        <div class="col-12 col-md-4">LOCATION <br>lorem ipsum docet</div>
+                        <div class="col-12 col-md-4">AROUND <br>lorem ipsum docet</div>
+                        <div class="col-12 col-md-4">ABOUT <br> lorem ipsum docet</div>
+                    </div>
+                </div>
+            </section>
+            <section>
+                <div class="container">
+                    <div class="row text-center">
+                        <div class="col-12">
+                            Copyright c your website 2019
+                        </div>
+                    </div>
+                </div>
+            </section>
 
         </footer>
     </body>
