--- a/index.html
+++ b/index.html
@@ -7,14 +7,27 @@
         <title>Document</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
         <link rel="stylesheet" href="./css/style.css">
+        <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer">
     </head>
     <body>
         <!-- HEADER  -->
-        <header>
+        <header class="text-white">
             <div class="container">
-                <div class="row justify-content-between">
-                    <div class="col-4">START BOOTSTRAP</div>
-                    <div class="col-4 text-end">HAMB.</div>
+                <div class="row justify-content-between align-items-center">
+                    <div class="col-4 text-bold">START BOOTSTRAP</div>
+                    <div class="col-4 text-end">
+                        <div id="hamburger" class="d-md-none">
+                            <i class="fa-sharp fa-solid fa-bars"></i>
+                        </div>
+                        <nav class="d-none d-md-block">
+                            <ul class="d-flex justify-content-between">
+                                <li>PORTFOLIO</li>
+                                <li>ABOUT</li>
+                                <li>CONTACT</li>
+                            </ul>
+                        </nav>
+                    </div>
                 </div>
             </div>
         </header>
