--- a/index.html
+++ b/index.html
@@ -34,12 +34,26 @@
         <main>
             <!-- PRIMA SECTION  -->
             <section>
-                <div class="container text-center">
+                <div class="container text-center text-white">
                     <div class="row gy-3">
-                        <div class="col-12">IMG</div>
-                        <div class="col-12">START BOOTSTRAP</div>
-                        <div class="col-12">STAR</div>
-                        <div class="col-12">LOREM - IPSUM -DOCET - CARPE - DIEM</div>
+                        <div class="col-12">
+                            <div class="row justify-content-center">
+                                <div class="col-8 col-md-6 col-lg-3">
+                                    <img src="./img/avatar.svg" alt="">
+                                </div>
+                            </div>                                
+                        </div>
+                        <div class="col-12"><h1 class="text-bold">START BOOTSTRAP</h1></div>
+                        <div class="col-12 star-container">
+                            <div class="row justify-content-center align-items-center">
+                                <div class="col-2 col-lg-1 line"></div>
+                                <div class="col-2 col-lg-1">
+                                    <i class="fa-solid fa-star"></i>
+                                </div>
+                                <div class="col-2 col-lg-1 line"></div>
+                            </div>
+                        </div>
+                        <div class="col-12 font-125">GRAPHIC ARTIST - WEB DESIGNER - ILLUSTRATOR</div>
                     </div>
                 </div>
             </section>
