--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
         <main>
             <!-- PRIMA SECTION  -->
             <section>
-                <div class="container text-center text-white">
+                <div class="container text-center text-white p-0">
                     <div class="row gy-3">
                         <div class="col-12">
                             <div class="row justify-content-center">
-                                <div class="col-8 col-md-6 col-lg-3">
+                                <div class="col-6 col-md-4 col-lg-3">
                                     <img src="./img/avatar.svg" alt="">
                                 </div>
                             </div>                                
@@ -46,29 +46,51 @@
                         <div class="col-12"><h1 class="text-bold">START BOOTSTRAP</h1></div>
                         <div class="col-12 star-container">
                             <div class="row justify-content-center align-items-center">
-                                <div class="col-2 col-lg-1 line"></div>
+                                <div class="col-2 col-lg-1 line bg-white"></div>
                                 <div class="col-2 col-lg-1">
                                     <i class="fa-solid fa-star"></i>
                                 </div>
-                                <div class="col-2 col-lg-1 line"></div>
+                                <div class="col-2 col-lg-1 line bg-white"></div>
                             </div>
                         </div>
-                        <div class="col-12 font-125">GRAPHIC ARTIST - WEB DESIGNER - ILLUSTRATOR</div>
+                        <div class="col-12">GRAPHIC ARTIST - WEB DESIGNER - ILLUSTRATOR</div>
                     </div>
                 </div>
             </section>
             <!-- SECONDA SECTION  -->
             <section>
-                <div class="container">
+                <div class="container p-0">
                     <div class="row g-3 justify-content-between row-cols-1 row-cols-md-2 row-cols-lg-3 text-center"> <!-- margin orizzontale ? -->
-                        <div class="col-12">PORTFOLIO</div>
-                        <div class="col-12 ">STAR</div>
-                        <div class="col">img</div>
-                        <div class="col">img</div>
-                        <div class="col">img</div>
-                        <div class="col">img</div>
-                        <div class="col">img</div>
-                        <div class="col">img</div>
+                        <div class="col-12">
+                            <h3 class="text-bold">PORTFOLIO</h3>
+                        </div>
+                        <div class="col-12 star-container">
+                            <div class="row justify-content-center align-items-center">
+                                <div class="col-2 col-lg-1 line bg-black"></div>
+                                <div class="col-2 col-lg-1">
+                                    <i class="fa-solid fa-star"></i>
+                                </div>
+                                <div class="col-2 col-lg-1 line bg-black"></div>
+                            </div>
+                        </div>
+                        <div class="col">
+                            <img src="./img/cabin.png" alt="cabin">
+                        </div>
+                        <div class="col">
+                            <img src="./img/cake.png" alt="cake">
+                        </div>
+                        <div class="col">
+                            <img src="./img/circus.png" alt="circus">
+                        </div>
+                        <div class="col">
+                            <img src="./img/game.png" alt="game">
+                        </div>
+                        <div class="col">
+                            <img src="./img/safe.png" alt="safe">
+                        </div>
+                        <div class="col">
+                            <img src="./img/submarine.png" alt="sub">
+                        </div>
                     </div>
                 </div>
             </section>
