--- a/index.html
+++ b/index.html
@@ -95,14 +95,26 @@
                 </div>
             </section>
             <!-- TERZA SECTION  -->
-            <section>
+            <section class="text-white">
                 <div class="container">
                     <div class="row justify-content-center g-3"> <!-- margin orizzontale ? -->
-                        <div class="col-12 text-center">ABOUT</div>
-                        <div class="col-12 text-center">STAR</div>
-                        <div class="col-8 col-md-4 col-lg-5">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Facere voluptas distinctio obcaecati deleniti commodi natus a corporis tenetur facilis quaerat? Similique magni aliquid adipisci, officia modi tenetur quisquam esse amet.</div>
-                        <div class="col-8 col-md-4 col-lg-5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam debitis rem adipisci sed corrupti quod at laudantium iure earum labore rerum nemo quam beatae enim atque similique, nostrum tempora in.</div>
-                        <div class="col-12 text-center">Download</div>
+                        <div class="col-12 text-center">
+                            <h3>ABOUT</h3>
+                        </div>
+                        <div class="col-12 text-center">
+                            <div class="col-12 star-container">
+                                <div class="row justify-content-center align-items-center">
+                                    <div class="col-1 line bg-white"></div>
+                                    <div class="col-2 col-lg-1">
+                                        <i class="fa-solid fa-star"></i>
+                                    </div>
+                                    <div class="col-1 line bg-white"></div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-8 col-md-4 col-lg-5">Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional SASS stylesheets for easy customization.</div>
+                        <div class="col-8 col-md-4 col-lg-5">You can create your own custom avatar for the masthead, change the icon in the dividers, and add your email address to the contact form to make it fully functional!</div>
+                        <div class="col-12 text-center"><button type="button" class="btn text-white"><i class="fa-solid fa-download"></i> Download</button></div>
                     </div>
                 </div>
             </section>
