--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             <!-- SECONDA SECTION  -->
             <section>
                 <div class="container p-0">
-                    <div class="row g-3 justify-content-between row-cols-1 row-cols-md-2 row-cols-lg-3 text-center"> <!-- margin orizzontale ? -->
+                    <div class="row g-3 justify-content-between row-cols-1 row-cols-md-2 row-cols-lg-3 text-center">
                         <div class="col-12">
                             <h3 class="text-bold">PORTFOLIO</h3>
                         </div>
@@ -97,7 +97,7 @@
             <!-- TERZA SECTION  -->
             <section class="text-white">
                 <div class="container">
-                    <div class="row justify-content-center g-3"> <!-- margin orizzontale ? -->
+                    <div class="row justify-content-center g-3">
                         <div class="col-12 text-center">
                             <h3>ABOUT</h3>
                         </div>
@@ -118,21 +118,32 @@
                     </div>
                 </div>
             </section>
-            <section>
+            <!-- QUARTA SECTION  -->
+            <section id="contact">
                 <div class="container">
-                    <div class="row justify-content-center g-3"> <!-- margin orizzontale ? -->
-                        <div class="col-12 text-center">CONTACT ME</div>
-                        <div class="col-12 text-center">STAR</div>
-                        <div class="col-sm-7 col-md-8 col-lg-10 ">
-                            <div>
-                                <ul>
-                                    <li>Name</li>
-                                    <li>Email</li>
-                                    <li>Phone</li>
-                                    <li>Message</li>
-                                    <li>send</li>
-                                </ul>
+                    <div class="row justify-content-center g-3">
+                        <div class="col-12 text-center">
+                            <h3 class="text-bold">CONTACT ME</h3>
+                        </div>
+                        <div class="col-12 text-center">
+                            <div class="col-12 star-container">
+                                <div class="row justify-content-center align-items-center">
+                                    <div class="col-1 line bg-black"></div>
+                                    <div class="col-2 col-lg-1">
+                                        <i class="fa-solid fa-star"></i>
+                                    </div>
+                                    <div class="col-1 line bg-black"></div>
+                                </div>
                             </div>
+                        </div>
+                        <div class="col-9 col-md-8 col-lg-10 ">
+                            <ul id="form">
+                                <li>Name</li>
+                                <li>Email Address</li>
+                                <li>Phone Number</li>
+                                <li>Message</li>
+                                <li><button type="button" class="btn text-white">Send</button></li>
+                            </ul> 
                         </div>
                     </div>
                 </div>
