--- a/index.html
+++ b/index.html
@@ -150,13 +150,20 @@
             </section>
         </main>
         <!-- FOOTER  -->
-        <footer>
+        <footer class="text-white">
             <section>
                 <div class="container">
-                    <div class="row text-center">
-                        <div class="col-12 col-md-4">LOCATION <br>lorem ipsum docet</div>
-                        <div class="col-12 col-md-4">AROUND <br>lorem ipsum docet</div>
-                        <div class="col-12 col-md-4">ABOUT <br> lorem ipsum docet</div>
+                    <div class="row text-center gy-3">
+                        <div class="col-12 col-md-4">LOCATION <br>2215 John Daniel Drive Clark, MO 54243</div>
+                        <div class="col-12 col-md-4">AROUND THE WEB <br>
+                            <i class="fa-brands fa-facebook-f"></i>
+                            <i class="fa-brands fa-google-plus-g"></i>
+                            <i class="fa-brands fa-twitter"></i>
+                            <i class="fa-brands fa-linkedin-in"></i>
+                        </div>
+                        <div class="col-12 col-md-4">ABOUT FREELANCER<br> 
+                            Freelance is a free to use, open source Bootstraptheme created by <a href="#">Start Bootstrap</a>.
+                        </div>
                     </div>
                 </div>
             </section>
