--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                         <nav class="d-none d-md-block">
                             <ul class="d-flex justify-content-between">
                                 <li>PORTFOLIO</li>
-                                <li>ABOUT</li>
+                                <li class="mx-2">ABOUT</li>
                                 <li>CONTACT</li>
                             </ul>
                         </nav>
