--- a/Bonus/index.html
+++ b/Bonus/index.html
@@ -43,7 +43,7 @@
         </header>
         <main>
             <!-- PRIMA SECTION  -->
-            <section>
+            <section id="jumbo">
                 <div class="container text-center text-white p-0">
                     <div class="row gy-3">
                         <div class="col-12">
@@ -186,7 +186,8 @@
                     </div>
                 </div>
             </section>
-
         </footer>
     </body>
+    <!-- JavaScript Bundle with Popper -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
 </html>
