--- a/Bonus/index.html
+++ b/Bonus/index.html
@@ -147,13 +147,13 @@
                             </div>
                         </div>
                         <div class="col-9 col-md-8 col-lg-10 ">
-                            <ul id="form">
-                                <li>Name</li>
-                                <li>Email Address</li>
-                                <li>Phone Number</li>
-                                <li>Message</li>
-                                <li><button type="button" class="btn text-white">Send</button></li>
-                            </ul> 
+                            <form action="#">
+                                <input type="text" placeholder="Name">
+                                <input type="email" placeholder="Email Address">
+                                <input type="tel" id="phone" name="phone" pattern="[0-9]{3}-[0-9]{2}-[0-9]{3}" placeholder="Phone Number">
+                                <textarea name="message" id="" cols="30" rows="10" placeholder="Message"></textarea>
+                                <button type="button" class="btn text-white"><i class="fa-solid fa-download"></i> Download</button>
+                            </form>
                         </div>
                     </div>
                 </div>
