--- a/Bonus/index.html
+++ b/Bonus/index.html
@@ -152,7 +152,7 @@
                                 <input type="email" placeholder="Email Address">
                                 <input type="tel" id="phone" name="phone" pattern="[0-9]{3}-[0-9]{2}-[0-9]{3}" placeholder="Phone Number">
                                 <textarea name="message" id="" cols="30" rows="10" placeholder="Message"></textarea>
-                                <button type="button" class="btn text-white"><i class="fa-solid fa-download"></i> Download</button>
+                                <input type="submit" value="Send" class="text-white">
                             </form>
                         </div>
                     </div>
